# NeuralNetwork

./: LICENSE  NeuralNetwork.cabal  NeuralNetwork.projectile  README.md
src/Algorithm/: GradientDescent.hs  Training.hs
src/Data/: Network.hs
src/Data/Network/: Activation.hs  FullyConnected.hs  Utils.hs
src/MNIST/: Main.hs  Parser.hs
tests/: Network.hs  Spec.hs
tests/Data/: NetworkSpec.hs
tests/Data/Network/: FullyConnectedSpec.hs  FullyConnectedSpec.hs~
