name:                NeuralNetwork
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/drpyser/NeuralNetwork#readme
license:             BSD3
license-file:        LICENSE
author:              drpyser
maintainer:          schok53@gmail.com
copyright:           2017 drpyser
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010                      
  exposed-modules:     Data.Network, Data.Network.Activation, Data.Network.Utils, Data.Network.FullyConnected,
                       Algorithm.Training, Algorithm.GradientDescent                       
  build-depends:       base >= 4.7 && < 5,
                       -- linear algebra package
                       hmatrix >= 0.18,
                       -- -- for parsing binary data(mnist)
                       -- binary,
                       -- for working with randomness (network initialisation)
                       random,
                       -- for working with vectors(hmatrix uses this)
                       vector,
                       -- -- for working with bytes(mnist)
                       -- word8,
                       -- monad transformers
                       mtl,
                       -- automatic differentiation
                       ad,
                       -- monad and usefulness for random stuff
                       MonadRandom,
                       -- for a modular, streaming design
                       pipes,
                       -- for playing with strictness
                       deepseq          
                       -- lens          -- for easier data structure manipulations
                     
executable MNISTClassifier
  hs-source-dirs:      src/MNIST
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Parser
  build-depends:       base >= 4.7 && < 5,
                       -- linear algebra package
                       hmatrix >= 0.18,
                       -- compression library
                       zlib,
                       -- for parsing binary data(mnist)
                       binary,
                       -- for working with randomness (network initialisation)
                       random,
                       -- for working with bytestrings(mnist)
                       bytestring,
                       -- for working with vectors(hmatrix uses this)
                       vector,
                       -- for working with bytes(mnist)
                       word8,
                       -- monad transformers
                       mtl,
                       -- for a modular, streaming design
                       pipes,
                       -- for playing with strictness
                       deepseq,
                       --
                       NeuralNetwork
                       -- lens          -- for easier data structure manipulations

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Spec.hs
  other-modules:       Data.NetworkSpec
  build-depends:       NeuralNetwork,
                       base >= 4.7 && < 5,
                       hspec >= 2.4.3,
                       random,
                       hmatrix >= 0.18
